change every layout and permalinks for most webpages!

--- a/newtab.html
+++ b/newtab.html
@@ -1,8 +1,12 @@
+---
+permalink: newtab
+---
+
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>a</title>
+    <title>a123</title>
     <!--<link rel="stylesheet" type="text/css" link="https://unpkg.com/mono-icons@1.0.0/iconfont/icons.css"> -->
     <style>
           @font-face {
