--- a/newtab.html
+++ b/newtab.html
@@ -55,7 +55,7 @@ permalink: newtab
     h1 {
         display: inline;
         font-family: var(--font);
-        font-size: 1rem;
+        font-size: 4vw;
         font-weight: normal;
         color: var(--red);
     }
