change tab hyperlinks

--- a/_pages/newtab3.html
+++ b/_pages/newtab3.html
@@ -1,5 +1,5 @@
 ---
-permalink: oldtab
+permalink: oldtab.html
 ---
 
 <html lang="en-US">
@@ -18,9 +18,9 @@ permalink: oldtab
     <title> New Tab </title>
     <style> @import url('https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css');
     
-   body {
-    background-color: #cec6c7;
-    color: #fff;
+  body {
+    background-color: #b3a5a6;
+    color: rgb(255, 222, 191);
     text-align: center;
   }
   
@@ -33,6 +33,9 @@ permalink: oldtab
   a {
     color: #1b1b1b;
     text-decoration: none;
+  }
+  a:hover {
+    color: #222;
   }
   
   .column {
@@ -52,7 +55,7 @@ permalink: oldtab
       </div>
   
     <div class="row">
-        <div class="one-third column"><a href="https://www.last.fm/user/j0rdane"> last.fm </a></div>
+        <div class="one-third column"><a href="https://www.last.fm/user/jl-"> last.fm </a></div>
         <div class="one-third column"><a href="https://www.youtube.com"> youtube </a></div>
         <div class="one-third column"><a href="https://www.twitter.com"> twitter </a></div>
       </div>
