--- a/pages/newtab.html
+++ b/pages/newtab.html
@@ -51,7 +51,9 @@ permalink: /newtab.html
     span {
         color: var(--pink);
     }
-
+    input {
+      font-size: 3.5;
+    }
     h1 {
         display: inline;
         font-family: var(--font);
