--- a/pages/newtab3.html
+++ b/pages/newtab3.html
@@ -9,12 +9,6 @@ permalink: oldtab.html
     <link rel="icon" type="image/png" href="../images/icon.svg">
   </head>
   <body>
-    <script src="../js/lib/i18n.js"></script>
-    <script src="../js/core/defaults.js"></script>
-    <script src="../js/features/local_file.js"></script>
-  
-  
-   
     <title> New Tab </title>
     <style> @import url('https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css');
     
@@ -39,16 +33,15 @@ permalink: oldtab.html
   }
   
   .column {
-    margin-top: 80px;
+    margin-top: 200px;
     font-size: 22px;
   }
-    </style>
+  </style>
   
   
     <div class="container">
       <h2> you only lose what you cling to </h2>
-      <iframe src="https://duckduckgo.com/search.html?width=450&amp;prefill=search&amp;bgcolor=e8e8e8" style="overflow:hidden;margin:0;padding:0;width:508px;height:40px;" frameborder="0"></iframe>
-      <div class="row">
+        <iframe src="https://duckduckgo.com/search.html?width=480&prefill=search...&bgcolor=#FFDEBF&focus=yes" style="overflow:hidden;margin:0;padding:0;width:538px;height:40px;" frameborder="0"></iframe>      <div class="row">
         <div class="one-third column"><a href="https://old.reddit.com/r/all/"> reddit </a></div>
         <div class="one-third column"><a href="https://www.twitch.tv/"> twitch </a></div>
         <div class="one-third column"><a href="https://news.ycombinator.com/"> hackernews </a></div>
