this will break jekyll

--- a/pages/newtab.html
+++ b/pages/newtab.html
@@ -6,8 +6,7 @@ permalink: /newtab.html
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>a123</title>
-    <!--<link rel="stylesheet" type="text/css" link="https://unpkg.com/mono-icons@1.0.0/iconfont/icons.css"> -->
+    <title>new tab</title>
     <style>
           @font-face {
         font-family: "Roboto Mono";
